--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,29 +1,29 @@
-#table td{ 
-    font-size: 24px;
+li{  
+    font-size: 30px;
+    padding-bottom: 10px;
     padding-left: 10px;
-    padding-bottom: 100px;
-    padding-top: 10px;
-    margin-bottom: 20px;
-    display: inline;
-    /* position: relative; */
-    flex-direction: column;
+
 }
 
-#table{
-    border-collapse: separate;
-    border-spacing: 0px 15px;
+.fa-check{ 
+    float:right;
+    position: relative;
+    right: 80px
 }
-
-#completebutton{ 
-    position: absolute;
-    left: 600px
-}
-#deletebutton{ 
-    position: absolute;
-    left: 520px; 
-    border-radius: 20px;
+.fa-times{ 
+    float:right;
 }
 
 .fa-times:active{
     color: rgb(189, 35, 35);
 }
+
+.fa-check:active{
+    color: rgb(61, 189, 35);
+}
+
+.checked{
+    color: rgb(61, 189, 35);
+}
+    
+
